--- a/src/ui/assets/styles/components/_discite.scss
+++ b/src/ui/assets/styles/components/_discite.scss
@@ -205,7 +205,7 @@ $module: 'discite';
 	}
 }
 
-.discite__item--event{
+.discite__item--event {
 	width: 100%;
 	padding-left: 20px;
 	box-sizing: border-box;
@@ -217,11 +217,20 @@ $module: 'discite';
 	}
 
 	.course-details {
-		width: 101px;
+		width: 190px;
+
+		.govuk-body {
+			font-size: 16px;
+		}
+
+		.module-type {
+			font-size: 16px;
+			margin: 0;
+		}
 	}
 
 	.discite__item--main {
-		flex-basis: auto;
+		flex: 1;
 	}
 }
 
