--- a/src/ui/component/DisciteCourse.html
+++ b/src/ui/component/DisciteCourse.html
@@ -33,31 +33,29 @@
         <DisciteCourseActions cta={($constructCourseCallToAction(course, modifier))} {course} {modifier} {module} today={modifier === home ? new Date() : null} />
     </slot>
 
-    {#if modifier === "home"}
-        {#if booked === true}
-            <div class="discite__item--event">
-                <div class="discite__item--main">
-                    <h3 class="heading discite__heading"><a href="/courses/{course.id}" class="govuk-body govuk-link">{bookedModule.moduleTitle}</a></h3>
-                    <p class="govuk-body">Start date: {$datetime.formatDate(course.getSelectedDate())}</p>
-                    <a href={$constructCourseCallToAction(course).url}>Cancel booking</a>
-                </div>
-                <div class="course-details">
-                    <p class="govuk-body no-margin"><span class="visuallyhidden">Type:</span>
-                        {#if bookedModule.moduleType === 'face-to-face'}
-                            Face to face
-                        {:else}
-                            {bookedModule.moduleType}
-                        {/if}
-                    </p>
-                    <p class="govuk-body"> <span class="visuallyhidden">Duration: </span>
-                        {duration}
-                    </p>
-                </div>
-                <div class="discite__property-item discite__status--home">
-                    <span class="badge badge--discite badge--info">{bookedModule.bookingStatus}</span>
-                </div>
+    {#if modifier === "home" && booked === true}
+        <div class="discite__item--event">
+            <div class="discite__item--main">
+                <h3 class="heading discite__heading"><a href="/courses/{course.id}" class="govuk-link">{bookedModule.moduleTitle}</a></h3>
+                <p class="discite__property-item">Start date: {$datetime.formatDate(course.getSelectedDate())}</p>
+                <a class="discite__property-item" href={$constructCourseCallToAction(course).url}>Cancel booking</a>
             </div>
-        {/if}
+            <div class="course-details">
+                <p class="discite__property-item no-margin"><span class="visuallyhidden">Type:</span>
+                    {#if bookedModule.moduleType === 'face-to-face'}
+                        Face to face
+                    {:else}
+                        {bookedModule.moduleType}
+                    {/if}
+                </p>
+                <p class="discite__property-item no-margin"> <span class="visuallyhidden">Duration: </span>
+                    {duration}
+                </p>
+            </div>
+            <div class="discite__property-item discite__status--home">
+                <span class="badge badge--discite badge--info">{bookedModule.bookingStatus}</span>
+            </div>
+        </div>
     {/if}
 </div>
 
