changed all flash message banner colours from turquoise to blue

--- a/src/ui/assets/styles/components/_banner.scss
+++ b/src/ui/assets/styles/components/_banner.scss
@@ -6,7 +6,7 @@
 	margin-bottom: 30px;
 
 	// Default
-	background-color: $light-blue;
+	background-color: $flash-message;
 
 	@include e(action) {
 		display: inline-block;
@@ -28,7 +28,7 @@
 	}
 
 	@include m(confirmation) {
-		background-color: $turquoise;
+		background-color: $flash-message;
 	}
 
 	@include m(info) {
