found another light blue variable

--- a/src/ui/assets/styles/components/_results.scss
+++ b/src/ui/assets/styles/components/_results.scss
@@ -1,7 +1,7 @@
 .govuk-box-highlight {
 	&.results {
 		padding: 1em;
-		background-color: $govuk-blue;
+		background-color: $flash-message;
 
 		h1 {
 			@extend .heading-large;
