extended feedback link to cover entire sentence

--- a/src/ui/component/Header.html
+++ b/src/ui/component/Header.html
@@ -19,11 +19,7 @@
 
 <div id="global-header-bar"></div>
 <div class="phase-banner">
-    <p>
-        <strong class="phase-tag">BETA</strong>
-        <span>Complete our survey to 
-            <a class="lpg-feedback-link" href="https://www.smartsurvey.co.uk/s/CSHR-Privatebeta/" target="_blank">help us improve our new service</a> (opens in new window).</span>
-    </p>
+    <p><strong class="phase-tag">BETA</strong> <a class="lpg-feedback-link" href="https://www.smartsurvey.co.uk/s/CSHR-Privatebeta/" target="_blank">Complete our survey to help us improve our new service (opens in new window)</a>.</p>
 </div>
 
 <script>
