--- a/src/ui/component/Feedback.html
+++ b/src/ui/component/Feedback.html
@@ -4,7 +4,7 @@
             <div class="feedback">
                 <a class="feedback-prompt" href="">Is there anything wrong with this page?</a>
                 <div class="feedback-details">
-                    <h4>Help us improve Civil Service Learning</h4>
+                    <h4 class="heading-medium u-space-t30">Help us improve Civil Service Learning</h4>
                     <p>Don’t include personal or financial information like your National Insurance number or credit card details.</p>
                     <form autocomplete="off" action="/feedback.record" method="post">
                         <label for="whatDoing">What were you doing?</label>
