Lpfg 1007 color contrast (#473)
* changed flash message banner message

* changed all flash message banner colours from turquoise to blue

* found another light blue variable

* override for gds component

* improvrd contrast ratio on panel messages

--- a/src/ui/assets/styles/components/_banner.scss
+++ b/src/ui/assets/styles/components/_banner.scss
@@ -6,7 +6,7 @@
 	margin-bottom: 30px;
 
 	// Default
-	background-color: $light-blue;
+	background-color: $flash-message;
 
 	@include e(action) {
 		display: inline-block;
@@ -28,11 +28,11 @@
 	}
 
 	@include m(confirmation) {
-		background-color: $turquoise;
+		background-color: $flash-message;
 	}
 
 	@include m(info) {
-		background: $govuk-blue;
+		background: $flash-message;
 	}
 
 	@include m(warning) {
