--- a/src/ui/assets/styles/common/_variables.scss
+++ b/src/ui/assets/styles/common/_variables.scss
@@ -19,6 +19,7 @@ $footer-link: #454a4c;
 $footer-link-hover: #171819;
 $footer-text: $footer-link;
 $optional-text: $footer-text;
+$flash-message: #005ea5;
 
 $focus: #ffbf47;
 $grey: #aaa;
