Lpfg 1009 autocomplete fix (#475)
* new phasebanner content to inform users that link opens a new tab

* lint

* extended feedback link to cover entire sentence

* accessibility changes to typeahead box

* removed redundant js and placeholder option value

--- a/src/ui/component/Header.html
+++ b/src/ui/component/Header.html
@@ -14,17 +14,12 @@
                 <Nav/>
             </div>
         </div>
-
     </div>
 </header>
 
 <div id="global-header-bar"></div>
 <div class="phase-banner">
-    <p>
-        <strong class="phase-tag">BETA</strong>
-        <span>This is a new service – your
-            <a class="lpg-feedback-link" href="https://www.smartsurvey.co.uk/s/CSHR-Privatebeta/" target="_blank">feedback</a>&nbsp;will help us to improve it.</span>
-    </p>
+    <p><strong class="phase-tag">BETA</strong> <a class="lpg-feedback-link" href="https://www.smartsurvey.co.uk/s/CSHR-Privatebeta/" target="_blank">Complete our survey to help us improve our new service (opens in new window)</a>.</p>
 </div>
 
 <script>
