--- a/src/ui/component/Feedback.html
+++ b/src/ui/component/Feedback.html
@@ -1,4 +1,4 @@
-<div class="container container--main">
+<div class="container container--main bottom-main">
     <div class="grid-row">
         <div class="column-full">
             <div class="feedback">
