Fixed missing module cost

--- a/src/ui/component/disciteParts/DisciteModuleProperties.html
+++ b/src/ui/component/disciteParts/DisciteModuleProperties.html
@@ -9,7 +9,7 @@
             </li>
             {#if module.type !== 'file'}
                 <li class="discite__property-item">
-                    <span class="visuallyhidden">Cost:</span> &pound;{module.price || 'Free'}
+                    <span class="visuallyhidden">Cost:</span> &pound;{module.cost || 'Free'}
                 </li>
             {/if}
         </ul>
