--- a/src/ui/assets/styles/common/_global.scss
+++ b/src/ui/assets/styles/common/_global.scss
@@ -90,6 +90,19 @@ hr.clear {
 	}
 }
 
+.skills-container {
+	margin-bottom: 60px;
+
+	.skills {
+		padding: 20px;
+		background-color: $light-grey;
+
+		.govuk-body {
+			font-size: 24px;
+		}
+	}
+}
+
 .govuk-body {
 	font-size: 19px;
 	margin-top: 0;
