--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -7,7 +7,7 @@
 @import 'common/typography';
 
 @import 'utils/utils';
-
+@import 'components/back-button';
 @import 'components/banner';
 @import 'components/bar-rating';
 @import 'components/discite';
