--- a/src/ui/assets/styles/common/_global.scss
+++ b/src/ui/assets/styles/common/_global.scss
@@ -94,6 +94,7 @@ hr.clear {
 		font-size: inherit;
 		border: none;
 		background: none;
+
 		&:hover {
 			cursor: pointer;
 		}
@@ -117,6 +118,10 @@ hr.clear {
 		}
 	}
 
+}
+
+.skills-list {
+	margin-bottom: 30px;
 }
 
 .govuk-body {
