added styling for quiz buttons

--- a/src/ui/assets/styles/common/_global.scss
+++ b/src/ui/assets/styles/common/_global.scss
@@ -128,3 +128,11 @@ hr.clear {
 .back-to-top {
 	text-align: right;
 }
+
+.multiple-choice .quiz + label::before {
+	top: 12px;
+}
+
+.multiple-choice .quiz + label::after {
+	top: 21px;
+}
