added banner for completed quizes

--- a/src/ui/component/Banner.html
+++ b/src/ui/component/Banner.html
@@ -3,7 +3,7 @@
         <span class="banner__heading-large">{title}</span>
     {/if}
     {#if message}
-        <p><strong>{message}</strong></p>
+        <p class="no-margin"><strong>{message}</strong></p>
     {/if}
 
     <slot></slot>
