fixed padding at bottom of main container

--- a/src/ui/assets/styles/common/_layout.scss
+++ b/src/ui/assets/styles/common/_layout.scss
@@ -16,6 +16,13 @@
 		}
 	}
 
+	@include m(homepage) {
+		padding-bottom: 40px;
+		@include media(desktop) {
+			padding-bottom: 40px;
+		}
+	}
+
 	outline: none;
 }
 
