update to menu hidden text for screen readers; added 'Overview H2 for course pages'

--- a/src/ui/component/Header.html
+++ b/src/ui/component/Header.html
@@ -10,7 +10,7 @@
         </div>
         <div class="header-proposition">
             <div class="content">
-                <a href="#proposition-links" class="js-header-toggle menu">Menu <span class="visually-hidden" id="visiblyHidden">closed</span></a>
+                <a href="#proposition-links" class="js-header-toggle menu"><span class="visually-hidden" id="visiblyHidden">Select to expand</span> Menu</a>
                 <Nav/>
             </div>
         </div>
