--- a/src/ui/component/DisciteCourse.html
+++ b/src/ui/component/DisciteCourse.html
@@ -38,7 +38,9 @@
             <div class="discite__item--main">
                 <h3 class="heading discite__heading"><a href="/courses/{course.id}" class="govuk-link">{bookedModule.moduleTitle}</a></h3>
                 <p class="discite__property-item">Start date: {$datetime.formatDate(course.getSelectedDate())}</p>
-                <a class="discite__property-item" href={$constructCourseCallToAction(course).url}>Cancel booking</a>
+                {#if bookedModule.bookingStatus !=="CANCELLED"}
+                    <a class="discite__property-item" href={$constructCourseCallToAction(course).url}>Cancel booking</a>
+                {/if}
             </div>
             <div class="course-details">
                 <p class="discite__property-item no-margin"><span class="visuallyhidden">Type:</span>
