Lpfg 1046 upcoming events (#470)
* listed out courses

* styling for event display

* added cancel button and module duration features

* added mobile styling for upcoming events

* update to DiscitCourse component

* lint

* removed cancel button from cancelled event

* added extra space

* test

* undo test

--- a/src/ui/assets/styles/components/_badge.scss
+++ b/src/ui/assets/styles/components/_badge.scss
@@ -9,6 +9,8 @@
 	text-align: center;
 	vertical-align: middle;
 	white-space: nowrap;
+	text-transform: lowercase;
+
 	// Default badge
 	background-color: $white;
 	color: $text-colour;
@@ -16,6 +18,10 @@
 
 	&:empty {
 		display: none;
+	}
+
+	.badge:first-letter {
+		text-transform: uppercase;
 	}
 
 	@include m(success) {
