--- a/src/ui/component/disciteParts/DisciteCourseProperties.html
+++ b/src/ui/component/disciteParts/DisciteCourseProperties.html
@@ -3,9 +3,8 @@
         <li class="discite__property-item">
             {#if course.record && course.record.state && course.record.state !== 'RETRIEVED' && course.record.state !== 'ARCHIVED' || successId}
             <div class="discite__status {modifier ? `discite__status--${modifier}` : ''}">
-                <span class="badge badge--discite badge--{successId ? 'success' : 'info'}">{$i18n(successId ? 'justAdded' : course.record.state)}</span>
-                {#if course.getSelectedDate()}
-                <span class="meta">{$datetime.formatDate(course.getSelectedDate())}</span>
+                {#if !course.getSelectedDate()}
+                    <span class="badge badge--discite badge--{successId ? 'success' : 'info'}">{$i18n(successId ? 'justAdded' : course.record.state)}</span>
                 {/if}
             </div>
             {/if}
