fixed course price on feedback page

--- a/src/ui/component/DisciteFeedback.html
+++ b/src/ui/component/DisciteFeedback.html
@@ -34,7 +34,7 @@
                 <span class="visuallyhidden">Duration:</span> {module.getDuration() || ''}
             </li>
             <li class="discite__property-item">
-                <span class="visuallyhidden">Cost:</span> &pound;{module.price + ' (ex VAT)' || 'Free'}
+                <span class="visuallyhidden">Cost:</span> &pound;{module.cost + ' (ex VAT)' || 'Free'}
             </li>
         </ul>
         <div class="discite__status">
