--- a/src/ui/assets/styles/common/_global.scss
+++ b/src/ui/assets/styles/common/_global.scss
@@ -114,3 +114,13 @@ hr.clear {
 .back-to-top {
 	text-align: right;
 }
+
+.banner.profile-banner {
+	text-align: center;
+	margin-bottom: 0;
+	margin-top: 40px;
+
+	p {
+		margin-bottom: 0;
+	}
+}
