--- a/src/ui/component/Banner.html
+++ b/src/ui/component/Banner.html
@@ -1,10 +1,9 @@
-<div class="banner {!!type ? 'banner--' + type : ''}">
+<div class="banner {!!type ? 'banner--' + type : ''} {customClass}">
     {#if title}
         <span class="banner__heading-large">{title}</span>
     {/if}
     {#if message}
         <p><strong>{message}</strong></p>
     {/if}
-
     <slot></slot>
 </div>
