LPFG-108: Added Account link to navigation

--- a/src/ui/component/Nav.html
+++ b/src/ui/component/Nav.html
@@ -11,6 +11,9 @@
         <li>
             <a href="/learning-record">Learning record</a>
         </li>
+        <li>
+            <a href="{$config.AUTHENTICATION.serviceUrl}/account">Account</a>
+        </li>
         {/if}
         <li>
             <a href="/profile">Profile</a>
