--- a/src/ui/assets/styles/components/_header.scss
+++ b/src/ui/assets/styles/components/_header.scss
@@ -139,17 +139,18 @@
 	}
 }
 
-.nav-content {
-	margin: 0 auto;
-}
-
 a.menu {
 	@include core-16;
-	color: $white;
+	color: $black;
 	display: block;
 	float: right;
 	text-decoration: none;
 	padding-top: 6px;
+	margin-right: 15px;
+	font-weight: bold;
+	position: relative;
+	top: 5px;
+
 	@include media(desktop) {
 		display: none;
 	}
@@ -170,20 +171,14 @@ a.menu {
 }
 #proposition-menu {
 	padding: 10px 0 0 0;
-	border-bottom: 1px solid $border;
-	// Some headers (Whitehall) don't have a propsition name, offset as if they did.
-	&.no-proposition-name {
-		@include media(desktop) {
-			margin-top: 37px;
-			// 37px is the amount of margin required to line up the nav list with the top of the search box
-		}
-	}
+	border-bottom: none;
 }
+
 #proposition-link,
 #proposition-links {
-	clear: both;
 	@extend %contain-floats;
 	padding: 0;
+	list-style-type: none;
 
 	.js-enabled & {
 		display: none;
@@ -196,15 +191,57 @@ a.menu {
 	}
 
 	li {
+		padding-left: 15px;
+		margin-left: -15px;
+		margin-bottom: 10px;
 		float: left;
-		width: 50%;
-		border-bottom: 1px solid $proposition-border;
-		padding-bottom: 10px;
+		clear: left;
+
+		@include media(desktop) {
+			float: left;
+			clear: none;
+			width: 50%;
+			padding: 0;
+			margin-bottom: 0;
+			margin-left: 0;
+		}
 
 		&:hover {
 			color: $flash-message;
-			border-bottom: 3px solid $flash-message;
-			padding-bottom: 7px;
+			border-left: 3px solid $flash-message;
+
+			@include media(desktop) {
+				border-bottom: 3px solid $flash-message;
+				border-left: none;
+				padding-bottom: 7px;
+			}
+
+			a {
+				margin-left: -3px;
+
+				@include media(desktop) {
+					margin-left: 0;
+				}
+			}
+		}
+
+		&.active {
+			border-left: 3px solid $flash-message;
+
+			@include media(desktop) {
+				border-bottom: 3px solid $flash-message;
+				border-left: none;
+				padding-bottom: 7px;
+			}
+
+			a {
+				color: $flash-message;
+				margin-left: -3px;
+
+				@include media(desktop) {
+					margin-left: 0;
+				}
+			}
 		}
 
 		@include media(desktop) {
@@ -227,7 +264,7 @@ a.menu {
 	a {
 		color: $black;
 		text-decoration: none;
-		@include bold-14;
+		@include bold-16;
 
 		@include media(desktop) {
 			@include bold-16;
@@ -252,5 +289,35 @@ a.menu {
 	}
 	@include media(desktop) {
 		float: none;
+	}
+}
+
+@media screen and (min-width: 769px) {
+	#proposition-menu {
+		border-bottom: 1px solid $border;
+	}
+}
+
+.nav-container {
+	margin: 0 15px;
+	border-bottom: 1px solid $border;
+	padding-bottom: 15px;
+
+	@include media(desktop) {
+		margin: 0 30px;
+		border-bottom: none;
+		padding-bottom: 0;
+	}
+
+	@include media(1020px) {
+		margin: 0 auto;
+	}
+}
+
+a.js-header-toggle.menu.js-hidden {
+	display: block;
+
+	@include media(desktop) {
+		display: none;
 	}
 }
