--- a/src/ui/component/Header.html
+++ b/src/ui/component/Header.html
@@ -21,11 +21,10 @@
 <div class="phase-banner">
     <p><strong class="phase-tag">BETA</strong> <a class="lpg-feedback-link" href="https://www.smartsurvey.co.uk/s/CSHR-Privatebeta/" target="_blank">Complete our survey to help us improve our new service (opens in new window)</a>.</p>
 </div>
-<div class="content nav-content with-proposition">
+<div class="content nav-container with-proposition">
     <a href="#proposition-links" class="js-header-toggle menu"><span class="visually-hidden" id="visiblyHidden">Select to expand</span> Menu</a>
     <Nav/>
-</div>
-
+</div>  
 <script>
 	import Nav from './Nav.html';
 
