capitalised all course property items

--- a/src/ui/assets/styles/components/_discite.scss
+++ b/src/ui/assets/styles/components/_discite.scss
@@ -109,6 +109,9 @@ $module: 'discite';
 	@include e(property-item) {
 		// div.discite__property-item
 		@include core-16;
+		&::first-letter {
+			text-transform: uppercase;
+		}
 	}
 
 	@include e(status) {
@@ -251,7 +254,6 @@ $module: 'discite';
 			width: auto;
 		}
 	}
-
 }
 
 @include media(desktop) {
