--- a/src/ui/assets/styles/common/_global.scss
+++ b/src/ui/assets/styles/common/_global.scss
@@ -13,6 +13,12 @@ hr.clear {
 	font-size: 19px;
 }
 
+.profile-container {
+	.heading-large {
+		margin-top: 20px;
+	}
+}
+
 .flash-message {
 	background: $flash-message;
 	color: #fff;
