--- a/src/ui/assets/styles/components/_govuk-related-items.scss
+++ b/src/ui/assets/styles/components/_govuk-related-items.scss
@@ -1,38 +1,38 @@
 .lpg-related-items {
-  margin-top: $gutter;
-  border: 1px solid $grey-2;
-  border-top: 10px solid $civil-service;
-  padding-top: 5px;
-  padding-left: 8px;
-  padding-right: 8px;
+	margin-top: $gutter;
+	border: 1px solid $alt-color;
+	border-top: 10px solid $civil-service;
+	padding-top: 5px;
+	padding-left: 8px;
+	padding-right: 8px;
 
-  &:first-of-type {
-    margin-top: 0;
-  }
+	&:first-of-type {
+		margin-top: 0;
+	}
 
-  @include m(search) {
-    border: 5px solid $grey-2;
-    padding: 0;
-  }
+	@include m(search) {
+		border: 5px solid $grey-2;
+		padding: 0;
+	}
 
-  @include e(heading) {
-    margin-top: 0.3em;
-    margin-bottom: 0.5em;
-  }
+	@include e(heading) {
+		margin-top: 0.3em;
+		margin-bottom: 0.5em;
+	}
 
-  @include m(course-overview) {
-    background-color: $light-grey;
-    padding-left: 0;
-    padding-right: 0;
-    margin-bottom: 0;
-    border: 1px solid $grey-2;
-    border-bottom: none;
-    border-top: 10px solid $civil-service;
-  }
-  @include e(th) {
-    padding-left: 8px;
-  }
-  @include e(td) {
-    padding-right: 8px;
-  }
+	@include m(course-overview) {
+		background-color: $light-grey;
+		padding-left: 0;
+		padding-right: 0;
+		margin-bottom: 0;
+		border: 1px solid $grey-2;
+		border-bottom: none;
+		border-top: 10px solid $civil-service;
+	}
+	@include e(th) {
+		padding-left: 8px;
+	}
+	@include e(td) {
+		padding-right: 8px;
+	}
 }
