removed stray ampersand

--- a/src/ui/component/disciteParts/DisciteModuleProperties.html
+++ b/src/ui/component/disciteParts/DisciteModuleProperties.html
@@ -12,7 +12,7 @@
             {#if module.type !== 'file'}
                 <li class="discite__property-item">
                     <span>Cost:</span>
-                    <span class="lpg-course-cost">&&pound;{module.cost || 'Free'}</span>
+                    <span class="lpg-course-cost">&pound;{module.cost || 'Free'}</span>
                 </li>
             {/if}
         </ul>
