added new arrow heads for filter boxes

--- a/src/ui/component/LeftSearchBox.html
+++ b/src/ui/component/LeftSearchBox.html
@@ -1,7 +1,7 @@
 <aside role="complementary">
     <form autocomplete="off" name="searchLearning" method="get" action="/search">
         <input type="hidden" id="query" name="q" value="{ query }" />
-        <div class="lpg-related-items form-group govuk-related-items--search leftSearchBox">
+        <div class="lpg-related-items form-group govuk-related-items--search leftSearchBox filter-toggle">
             <fieldset>
                 <legend>
                     <h2 class="govuk-related-items__heading heading-medium">Learning type</h2>
@@ -15,11 +15,11 @@
             </fieldset>
         </div>
 
-        <div class="lpg-related-items govuk-related-items--flush form-group  govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox">
+        <div class="lpg-related-items govuk-related-items--flush form-group  govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox filter-toggle">
             <fieldset>
 
                 <legend>
-                    <h3 class="govuk-related-items__heading heading-medium">Cost</h3>
+                    <h2 class="govuk-related-items__heading heading-medium">Cost</h2>
                 </legend>
 
                 <div class="multiple-choice">
@@ -29,7 +29,7 @@
             </fieldset>
         </div>
 
-        <div class="lpg-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox">
+        <div class="lpg-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox filter-toggle">
             <fieldset>
                 <legend>
                     <h2 class="govuk-related-items__heading heading-medium">Your department</h2>
@@ -57,7 +57,7 @@
             </fieldset>
         </div>
 
-        <div class="lpg-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox">
+        <div class="lpg-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox filter-toggle">
             <fieldset>
                 <legend>
                     <h2 class="govuk-related-items__heading heading-medium">Your areas of work</h2>
@@ -85,7 +85,7 @@
             </fieldset>
         </div>
 
-        <div class="lpg-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox">
+        <div class="lpg-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox filter-toggle">
             <fieldset>
                 <legend>
                     <h2 class="govuk-related-items__heading heading-medium">Your interests</h2>
