--- a/src/ui/assets/styles/components/_filter.scss
+++ b/src/ui/assets/styles/components/_filter.scss
@@ -1,27 +1,39 @@
-
 .filter-toggle {
+	h2 {
+		position: relative;
+		cursor: pointer;
 
-  @include m(shut) {
-    .multiple-choice {
-      display: none;
-    }
+		&::after {
+			position: absolute;
+			right: 0;
+			top: 10px;
+			width: 20px;
+			height: 20px;
+			content: ' ';
+			background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg width='16px' height='4px' viewBox='0 0 16 4' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cg id='Plus-and-Minus-icons' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Crect id='Minus' fill='%230B0C0C' fill-rule='nonzero' x='0' y='0' width='16' height='4'%3E%3C/rect%3E%3C/g%3E%3C/svg%3E");
+			background-size: contain;
+			background-repeat: no-repeat;
+			cursor: pointer;
+		}
+	}
 
-    h2 {
-      &::after {
-        content: "\25B2" !important;
-      }
-    }
-  }
-
-  h2 {
-    position: relative;
-    cursor: pointer;
-
-    &::after {
-      position: absolute;
-      right: 0;
-      top: 2px;
-      content: "\25BC";
-    }
-  }
+	@include m(shut) {
+		.multiple-choice {
+			display: none;
+		}
+		h2 {
+			&::after {
+				position: absolute;
+				right: 0;
+				top: 2px;
+				content: ' ';
+				width: 20px;
+				height: 20px;
+				background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg width='16px' height='16px' viewBox='0 0 16 16' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cg id='Plus-and-Minus-icons' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Cg id='Plus' fill='%230B0C0C' fill-rule='nonzero'%3E%3Crect id='Minus-Copy' x='0' y='6' width='16' height='4'%3E%3C/rect%3E%3Crect id='Minus-Copy-2' transform='translate(8.000000, 8.000000) rotate(90.000000) translate(-8.000000, -8.000000) ' x='0' y='6' width='16' height='4'%3E%3C/rect%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+				background-size: contain;
+				background-repeat: no-repeat;
+				cursor: pointer;
+			}
+		}
+	}
 }
