--- a/src/ui/component/LeftSearchBox.html
+++ b/src/ui/component/LeftSearchBox.html
@@ -1,5 +1,7 @@
 <aside role="complementary">
-    <form class="filters" autocomplete="off" name="searchLearning" method="get" action="/search">
+    <input type="checkbox" id="hide-filter" class="hide-filters" />
+    <label class="filter-label"for="hide-filter">search filters</label>
+    <form class="filter-form" autocomplete="off" name="searchLearning" method="get" action="/search">
         <input type="hidden" id="query" name="q" value="{ query }" />
         <button type="submit" class="button">Apply search filters</button>
         <a class="clear-filters" href="/search?q={query}">Clear all filters</a>
