capitalised course type first letter

--- a/src/ui/assets/styles/common/_global.scss
+++ b/src/ui/assets/styles/common/_global.scss
@@ -129,4 +129,8 @@ hr.clear {
 .lpg-course-duration,
 .lpg-course-cost {
 	font-weight: bold;
+
+	&::first-letter {
+		text-transform: uppercase;
+	}
 }
