--- a/src/ui/assets/styles/common/_global.scss
+++ b/src/ui/assets/styles/common/_global.scss
@@ -129,8 +129,9 @@ hr.clear {
 .lpg-course-duration,
 .lpg-course-cost {
 	font-weight: bold;
+	display: inline-block;
 
 	&::first-letter {
-		text-transform: uppercase;
+		text-transform: capitalize;
 	}
 }
