--- a/src/ui/assets/styles/components/_discite.scss
+++ b/src/ui/assets/styles/components/_discite.scss
@@ -87,7 +87,7 @@ $module: 'discite';
 
 	@include e(property) {
 		// ul.discite__property the actual data about the discite thing
-		width: 50%;
+		width: 150px;
 		float: left;
 
 		.badge {
