added quiz compinent

--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -26,6 +26,7 @@
 @import 'components/results';
 @import 'components/booking';
 @import 'components/search';
+@import 'components/quiz';
 @import 'components/search-results';
 @import 'components/resource';
 @import 'components/badge';
