fixed rebase error

--- a/src/ui/assets/styles/common/_global.scss
+++ b/src/ui/assets/styles/common/_global.scss
@@ -134,8 +134,9 @@ hr.clear {
 .column-with-back-button {
 	.heading-large {
 		margin-top: 20px;
+	}
 }
-   
+
 .lpg-course-type,
 .lpg-course-duration,
 .lpg-course-cost {
