--- a/src/ui/component/Nav.html
+++ b/src/ui/component/Nav.html
@@ -27,7 +27,7 @@
         {:else}
             <li><a href="/skills">Skills</a></li>
         {/if} 
-        {#if $signedInUser.hasRole('COURSE_MANAGER')}
+        {#if $signedInUser.hasRole('LEARNER_MANAGER')}
         <li>
             <a href="{$config.LPG_MANAGEMENT_URL}/content-management/">Admin</a>
         </li>
