--- a/src/ui/component/QuizQuestion.html
+++ b/src/ui/component/QuizQuestion.html
@@ -23,7 +23,9 @@
         </div>
     {/each}
 </div>
-<div class="correct">
-    <span class="icon"></span>
-</div>
+{#if summary}
+    <div class="correct">
+        <span class="icon"></span>
+    </div>
+{/if}
 
