--- a/src/ui/component/Nav.html
+++ b/src/ui/component/Nav.html
@@ -21,10 +21,12 @@
             <li class="active"><a href="/profile">Profile</a></li>
         {:else}
             <li><a href="/profile">Profile</a></li>
-        {/if} 
-        <li>
-            <a href="{$config.LPG_MANAGEMENT_URL}/content-management/">Admin</a>
-        </li>
+        {/if}
+       {#if $signedInUser.isAdmin()}
+       <li>
+           <a href="{$config.LPG_MANAGEMENT_URL}/content-management/">Admin</a>
+       </li>
+       {/if}
         <li>
             <a href="/sign-out">Sign out</a>
         </li>
