LPFG-1207 feedback page (#507)
* added back button to feedback page

* fixed sass

--- a/src/ui/assets/styles/common/_global.scss
+++ b/src/ui/assets/styles/common/_global.scss
@@ -135,6 +135,12 @@ hr.clear {
 	}
 }
 
+.custom-column-with-button {
+	.heading-large {
+		margin-top: 20px;
+	}
+}
+
 .lpg-course-type,
 .lpg-course-duration,
 .lpg-course-cost {
