--- a/src/ui/assets/styles/common/_global.scss
+++ b/src/ui/assets/styles/common/_global.scss
@@ -136,9 +136,9 @@ hr.clear {
 }
 
 .custom-column-with-button {
-	.heading-large {
+	.headind-xlarge {
 		margin-top: 20px;
-	}
+  }
 }
 
 .lpg-course-type,
