--- a/src/ui/component/QuizQuestion.html
+++ b/src/ui/component/QuizQuestion.html
@@ -1,27 +1,29 @@
 <div class="answers">
-    <h3 class="heading-medium">{question.question}</h3>{#if summary}<span class="icon"></span><label for={group}>Expand</label><input id={group} type="checkbox" class="expand"/>{/if}
-    {#each question.answers as answers, x}
-        <div class="multiple-choice">
-            {#if question.correctIndices.length > 1}
-                {#if question.correctIndices.includes(x) && summary}
-                    <input type="checkbox" value={answers} name={"answers"+group} id={answers+x} checked="checked" disabled="disabled" />
-                {:elseif summary }
-                    <input type="checkbox" value={answers} name={"answers"+group} id={answers+x} disabled="disabled" />
+    <h3 class="heading-medium">{question.question}</h3>{#if summary}<span class="icon"></span><input id={group} type="checkbox" class="expand"/><label class="expand-label" for={group}> answer</label>{/if}
+    <div class="question-contents">
+        {#each question.answers as answers, x}
+            <div class="multiple-choice">
+                {#if question.correctIndices.length > 1}
+                    {#if question.correctIndices.includes(x) && summary}
+                        <input type="checkbox" value={answers} name={"answers"+group} id={answers+x} checked="checked" disabled="disabled" />
+                    {:elseif summary }
+                        <input type="checkbox" value={answers} name={"answers"+group} id={answers+x} disabled="disabled" />
+                    {:else}
+                        <input type="checkbox" value={answers} name={"answers"+group} id={answers+x} />
+                    {/if}
                 {:else}
-                    <input type="checkbox" value={answers} name={"answers"+group} id={answers+x} />
+                    {#if question.correctIndices.includes(x) && summary}
+                        <input type="radio" value={answers} name={"answers"+group} id={answers+x} checked="checked" disabled="disabled" />
+                    {:elseif summary}
+                        <input type="radio" value={answers} name={"answers"+group} id={answers+x} disabled="disabled" />
+                    {:else}
+                        <input type="radio" value={answers} name={"answers"+group} id={answers+x} />
+                    {/if}
                 {/if}
-            {:else}
-                {#if question.correctIndices.includes(x) && summary}
-                    <input type="radio" value={answers} name={"answers"+group} id={answers+x} checked="checked" disabled="disabled" />
-                {:elseif summary}
-                    <input type="radio" value={answers} name={"answers"+group} id={answers+x} disabled="disabled" />
-                {:else}
-                    <input type="radio" value={answers} name={"answers"+group} id={answers+x} />
-                {/if}
-            {/if}
-            <label for={answers+x}>{answers}</label>
-        </div>
-    {/each}
+                <label for={answers+x}>{answers}</label>
+            </div>
+        {/each}
+    </div>
 </div>
 
 
