LC-112: Updated cookie url

--- a/src/ui/component/Footer.html
+++ b/src/ui/component/Footer.html
@@ -4,7 +4,7 @@
 			<div class="footer-meta-inner">
 				<ul>
 					<li>
-						<a href="https://www.gov.uk/help/cookies">Cookies</a>
+						<a href="https://lpg.cshr.digital/cookies">Cookies</a>
 					</li>
 					<li>
 						<a href="/privacy">Privacy</a>
