--- a/src/ui/component/Nav.html
+++ b/src/ui/component/Nav.html
@@ -28,6 +28,9 @@
        </li>
        {/if}
         <li>
+            <a href="/contact-us">Contact Us</a>
+        </li>
+        <li>
             <a href="/sign-out">Sign out</a>
         </li>
         {:else}
