LC-113: reworked footer

--- a/src/ui/component/Footer.html
+++ b/src/ui/component/Footer.html
@@ -9,11 +9,19 @@
 					<li>
 						<a href="/privacy">Privacy</a>
 					</li>
-					<li>
-						Built by the <a href="#">Civil Service Learning Platform</a>
-					</li>
+                    <li>
+                        <a href="/contact-us">Help and support</a>
+                    </li>
 				</ul>
+                <div>
+                    <ul>
+                        <li>
+                            Built by the <a href="#">Civil Service Learning Platform</a>
+                        </li>
+                    </ul>
+                </div>
 				<div class="open-government-licence">
+
 					<p class="logo">
 						<a
 							href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
