LC-125: updating footer and content

--- a/src/ui/component/Footer.html
+++ b/src/ui/component/Footer.html
@@ -10,7 +10,7 @@
 						<a href="/privacy">Privacy</a>
 					</li>
                     <li>
-                        <a href="/contact-us">Help and support</a>
+                        <a href="/contact-us">Contact us</a>
                     </li>
 				</ul>
                 <div>
