LC-139: casing of status

--- a/src/ui/component/DisciteCourse.html
+++ b/src/ui/component/DisciteCourse.html
@@ -37,7 +37,7 @@
         <div class="discite__item--event">
             <div class="discite__item--main">
                 <h3 class="heading discite__heading"><a href="/courses/{course.id}" class="govuk-link">{bookedModule.moduleTitle}</a></h3>
-                {#if bookedModule.bookingStatus !== "CANCELLED"}
+                {#if bookedModule.bookingStatus !== "Cancelled"}
                     <p class="discite__property-item">Start date: {$datetime.formatDate(course.getSelectedDate())}</p>
                     <a class="discite__property-item" href="/book/{course.id}/{bookedModule.moduleId}/{bookedModule.eventId}/cancel">Cancel booking</a>
                 {/if}
