--- a/src/ui/component/DisciteCourse.html
+++ b/src/ui/component/DisciteCourse.html
@@ -57,7 +57,7 @@
                 </p>
             </div>
             <div class="discite__property-item discite__status--home">
-                <span class="badge badge--discite badge--info">{bookedModule.state}</span>
+                <span class="badge badge--discite badge--info">{bookedModule.state ? $i18n(bookedModule.state) : ''}</span>
             </div>
         </div>
     {/if}
