--- a/src/ui/component/DisciteCourse.html
+++ b/src/ui/component/DisciteCourse.html
@@ -38,7 +38,7 @@
             <div class="discite__item--main">
                 <h3 class="heading discite__heading"><a href="/courses/{course.id}" class="govuk-link">{bookedModule.moduleTitle}</a></h3>
                 <p class="discite__property-item">Start date: {$datetime.formatDate(course.getSelectedDate())}</p>
-                {#if bookedModule.bookingStatus !== "Cancelled"}
+                {#if bookedModule.bookingStatus !== "UNREGISTERED"}
                     <a class="discite__property-item" href="/book/{course.id}/{bookedModule.moduleId}/{bookedModule.eventId}/cancel">Cancel booking</a>
                 {/if}
             </div>
@@ -57,7 +57,7 @@
                 </p>
             </div>
             <div class="discite__property-item discite__status--home">
-                <span class="badge badge--discite badge--info">{bookedModule.state ? $i18n(bookedModule.state) : ''}</span>
+                <span class="badge badge--discite badge--info">{bookedModule.bookingStatus}</span>
             </div>
         </div>
     {/if}
